<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="app.pankaj.googleplacesusingretrofit.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#5e6266"
            android:layout_marginTop="30dp"
            android:hint="@string/Name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person"
            />

        <EditText
            android:id="@+id/et_user_email"
            android:textColorHint="#5e6266"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            />


        <EditText
            android:id="@+id/et_user_pass"
            android:textColorHint="#5e6266"
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:drawablePadding="10dp"

            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_lock"

            />


        <EditText
            android:paddingLeft="5dp"
            android:id="@+id/et_user_confirm_pass"
            android:textColorHint="#5e6266"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="30dp"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_user_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:background="#006666"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />


    </LinearLayout>




</ScrollView>